--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "bootstrap": "^5.1.0",
     "bootswatch": "^5.1.1",
     "font-awesome": "^4.7.0",
